Fixed CSS colors and spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,20 @@
+body {
+    background-color: lightgrey;
+}
+.header {
+    background-color: white;
+}
+
+h1 {
+    font-size:24px;
+    padding:6px;
+}
 
 .DavidWu {
     padding: 15px;
     color: #ffffff;
     position: relative;
-    left: 30%;
+    left: 20%;
     width: 150px;
     background-color: teal;
     float: left;
@@ -12,5 +23,23 @@
 .links {
     float: right; 
     padding: 10px;
+    position: relative;
+    right: 15%;
 }
 
+.content {
+    background-color:white;
+    border-color: black;
+    border: 3px;
+    padding: 10px;
+    position: fixed;
+    left: 20%;
+    top: 10%;
+    width: 850px;
+}
+
+#photo {
+    width: 200px;
+    float: left;
+    margin-right: 20px;
+}
